--- a/Styles.css
+++ b/Styles.css
@@ -20,11 +20,11 @@ footer {
     color: black;
 }
 
-.Final[statement]{
+.final[statement]{
     color:blueviolet;
 }
 
-[global]{
+#global{
     color: hotpink;
 }
 
@@ -32,7 +32,7 @@ footer {
     color: peachpuff;
 }
 
-.Lilst > ul{
+.List > ul{
     color: greenyellow;
 }
 
@@ -40,6 +40,3 @@ footer {
     color: white;
 }
 
-.cswitch {
-    color:aquamarine;
-}
